# statusforge

./: .gitignore
.agents/rules/: statusforge-project.mdc
log-app-backend/: Cargo.toml
log-app-frontend/: package-lock.json  package.json
statusforge-backend/: .env.example  .gitignore  Cargo.toml  TODO.md
statusforge-backend/migrations/: 001_initial_schema.sql  README.md
statusforge-backend/src/: lib.rs  main.rs
statusforge-backend/src/features/: mod.rs
statusforge-backend/src/features/auth/: mod.rs  model.rs  service.rs
statusforge-backend/src/features/ingest/: mod.rs  model.rs  repository.rs  route.rs  service.rs
statusforge-backend/src/features/monitors/: mod.rs  model.rs  repository.rs  route.rs  service.rs
statusforge-backend/src/features/organizations/: model.rs  repository.rs  route.rs  service.rs
statusforge-backend/src/features/projects/: mod.rs  model.rs  repository.rs  route.rs  service.rs
statusforge-backend/src/shared/: config.rs  error.rs  mod.rs  supabase.rs  utils.rs
statusforge-backend/tests/: unit.rs
statusforge-backend/tests/unit/: config.rs  error.rs  logs.rs  logs_models.rs  models.rs  monitors.rs  monitors_models.rs  organizations.rs  projects.rs  projects_models.rs  repository.rs  routes.rs  utils.rs
statusforge-frontend/: package-lock.json  package.json
supabase/functions/: README.md
supabase/functions/monitor-check/: index.ts
supabase/migrations/: 20260217084740_initial-schema.sql  20260217100000_monitor-cron-jobs.sql  README-cron.md
