[package]
name = "statusforge-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
supabase = { package = "supabase-lib-rs", version = "0.5" }
dotenvy = "0.15"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49", features = ["full"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
envy = "0.4"
